[tool.poetry]
name = "slackblast"
version = "0.1.0"
description = ""
authors = ["Evan Petzoldt <evan.petzoldt@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
slack-sdk = "^3.26.2"
slack-bolt = "^1.18.1"
datetime = "^5.4"
cryptography = "^41.0.7"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.25"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
pillow = "^10.2.0"
pillow-heif = "^0.15.0"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
